--- a/css/general.css
+++ b/css/general.css
@@ -84,7 +84,7 @@ body {
 /*********************************/
 .container {
   max-width: 120rem;
-  padding: 3.2rem;
+  padding: 0 3.2rem;
   margin: 0 auto;
 }
 
