--- a/css/quries.css
+++ b/css/quries.css
@@ -22,3 +22,38 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+/*
+*********************************
+- BELOW 1200PX (Landscape Tablet 
+*********************************
+*/
+
+@media (max-width: 75rem) {
+  html {
+    /* 9px divide by 16 = 56.25% */
+    font-size: 56.25%;
+  }
+  .grid {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+  .heading-secondary {
+    font-size: 3.6rem;
+  }
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+  .header {
+    padding: 0 3.2rem;
+  }
+  .hero {
+    gap: 4.8rem;
+  }
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+  .testimonials-container {
+    padding-bottom: 3.2rem;
+  }
+}
