--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
 .main-nav-list {
   list-style: none;
   display: flex;
-  gap: 3.2rem;
+  gap: 4.8rem;
   align-items: center;
 }
 
@@ -310,7 +310,8 @@
 }
 
 .testimonials-container {
-  padding: 9.6rem;
+  padding: 1.6rem;
+  margin-top: 3.2rem;
 }
 
 .testimonial-img {
