--- a/css/quries.css
+++ b/css/quries.css
@@ -10,7 +10,7 @@
 - BELOW 1344px 
 *********************************
 */
-@media (max-width: 84rem) {
+@media (max-width: 84em) {
   .hero {
     max-width: 120rem;
   }
@@ -29,7 +29,7 @@
 *********************************
 */
 
-@media (max-width: 75rem) {
+@media (max-width: 75em) {
   html {
     /* 9px divide by 16 = 56.25% */
     font-size: 56.25%;
@@ -55,5 +55,63 @@
   }
   .testimonials-container {
     padding-bottom: 3.2rem;
+  }
+}
+
+/*
+*********************************
+- BELOW 944PX (Tablet)
+*********************************
+*/
+@media (max-width: 59em) {
+  html {
+    /*8px / 16px = 0.5 = 50%*/
+    font-size: 50%;
+  }
+
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 0 8rem;
+    gap: 6.4rem;
+  }
+
+  .hero-text-box,
+  .hero-img-box {
+    text-align: center;
+  }
+
+  .hero-img {
+    width: 60%;
+  }
+  .delivered-meals {
+    justify-content: center;
+    margin-top: 3.2rem;
+  }
+  .logos img {
+    height: 2.4rem;
+  }
+  .step-number {
+    font-size: 7.8rem;
+  }
+  .meal-content {
+    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+  }
+
+  .section-testimonials {
+    grid-template-columns: 1fr;
+  }
+  .gallary {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .cta {
+    grid-template-columns: 3fr 2fr;
+  }
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+
+  .btn-form {
+    margin-top: 1.2rem;
   }
 }
