--- a/css/quries.css
+++ b/css/quries.css
@@ -114,4 +114,56 @@
   .btn-form {
     margin-top: 1.2rem;
   }
+
+  /*MOBILE NAVIGATION SETTING*/
+  .icon-mobile-nav {
+    display: block;
+  }
+  .main-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+    background-color: rgba(225, 225, 225, 0.97);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.7s ease-in;
+
+    /*hide the navigation*/
+    /*using the display to none allow no trainsiction property*/
+    /*display: none;*/
+    opacity: 0;
+
+    /* mk it accessable to mouse and keyboard */
+    pointer-events: none;
+    /* hide from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close"] {
+    display: block;
+  }
+  .nav-open .icon-mobile-nav[name="menu"] {
+    display: none;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
 }
