--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   /* because we want the header to be sticky so we have to apply heaight */
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -55,6 +56,29 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
+/* stylying for the mobile nav  */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+  display: none;
+}
+
+.icon-mobile-nav[name="close"] {
+  display: none;
+}
+
+/*
+<ion-icon class="icon-mobile-nav" name="menu"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close"></ion-icon>
+*/
 
 /*********************************/
 /*Hero Section */
