--- a/css/quries.css
+++ b/css/quries.css
@@ -14,6 +14,7 @@
   .hero {
     max-width: 120rem;
   }
+
   .heading-primary {
     font-size: 4.4rem;
   }
@@ -34,27 +35,34 @@
     /* 9px divide by 16 = 56.25% */
     font-size: 56.25%;
   }
+
   .grid {
     column-gap: 4.8rem;
     row-gap: 6.4rem;
   }
+
   .heading-secondary {
     font-size: 3.6rem;
   }
+
   .heading-tertiary {
     font-size: 2.4rem;
   }
+
   .header {
     padding: 0 3.2rem;
   }
-  .hero {
-    gap: 4.8rem;
-  }
+
   .main-nav-list {
     gap: 3.2rem;
   }
+
+  .hero {
+    gap: 4.8rem;
+  }
+
   .testimonials-container {
-    padding-bottom: 3.2rem;
+    padding-bottom: 9.6rem 3.2rem;
   }
 }
 
@@ -75,24 +83,28 @@
     gap: 6.4rem;
   }
 
+  .hero-img {
+    width: 60%;
+  }
+
   .hero-text-box,
   .hero-img-box {
     text-align: center;
   }
 
-  .hero-img {
-    width: 60%;
-  }
   .delivered-meals {
     justify-content: center;
     margin-top: 3.2rem;
   }
+
   .logos img {
     height: 2.4rem;
   }
+
   .step-number {
-    font-size: 7.8rem;
+    font-size: 7.4rem;
   }
+
   .meal-content {
     padding: 2.4rem 3.2rem 3.2rem 3.2rem;
   }
@@ -100,13 +112,16 @@
   .section-testimonials {
     grid-template-columns: 1fr;
   }
+
   .gallary {
     grid-template-columns: repeat(6, 1fr);
   }
 
   .cta {
+    /*3/5 = 60% + 2/5 = 40%*/
     grid-template-columns: 3fr 2fr;
   }
+
   .cta-form {
     grid-template-columns: 1fr;
   }
@@ -116,9 +131,10 @@
   }
 
   /*MOBILE NAVIGATION SETTING*/
-  .icon-mobile-nav {
+  .btn-mobile-nav {
     display: block;
   }
+
   .main-nav {
     position: absolute;
     top: 0;
@@ -133,14 +149,21 @@
     transition: all 0.7s ease-in;
 
     /*hide the navigation*/
-    /*using the display to none allow no trainsiction property*/
+    /*using the display to none allow no transiction property*/
+
     /*display: none;*/
+    /*hide the element visually*/
     opacity: 0;
 
     /* mk it accessable to mouse and keyboard */
     pointer-events: none;
     /* hide from screen readers */
     visibility: hidden;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
   }
 
   .nav-open .main-nav {
@@ -153,17 +176,116 @@
   .nav-open .icon-mobile-nav[name="close"] {
     display: block;
   }
+
   .nav-open .icon-mobile-nav[name="menu"] {
     display: none;
-  }
-
-  .main-nav-list {
-    flex-direction: column;
-    gap: 4.8rem;
   }
 
   .main-nav-link:link,
   .main-nav-link:visited {
     font-size: 3rem;
+  }
+}
+
+/*this is the screen size for tablet small*/
+
+@media (max-width: 44em) {
+  .grid--3--cols,
+  .grid--4--cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-plan {
+    width: 100%;
+  }
+
+  .grid--footer {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
+
+  .address-col,
+  .logo-col {
+    grid-column: span 3;
+  }
+}
+
+/*******************/
+/* Below 544px (phones size) */
+
+@media (max-width: 34em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .grid--2--cols,
+  .grid--3--cols,
+  .grid--4--cols {
+    grid-template-columns: 1fr;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .hero-img {
+    width: 80%;
+  }
+
+  .logos img {
+    height: 1.2rem;
+  }
+
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+  .step-img-box:nth-child(6) {
+    grid-row: 5;
+  }
+  .step-img-box {
+    transform: translateY(24px);
+  }
+
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallary {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 12px;
+  }
+  .cta {
+    grid-template-columns: 1fr;
+  }
+  .cta-img-box {
+    height: 32rem;
+    grid-row: 1;
+  }
+  .cta-text-box {
+    padding: 3.2rem;
   }
 }
