--- a/css/styles.css
+++ b/css/styles.css
@@ -62,13 +62,13 @@
   border: none;
   background: none;
   cursor: pointer;
+  display: none;
 }
 
 .icon-mobile-nav {
   height: 4.8rem;
   width: 4.8rem;
   color: #333;
-  display: none;
 }
 
 .icon-mobile-nav[name="close"] {
@@ -520,7 +520,7 @@
       rgba(235, 151, 78, 0.35),
       rgba(230, 125, 34, 0.35)
     ),
-    url(/07-Omnifood-Desktop/img/eating.jpg);
+    url(../img/eating.jpg);
   background-size: cover;
   background-position: center;
 }
